# shuck

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .release-please-config.json  .release-please-manifest.json  .renovaterc.json5  AGENTS.md  AST_GAPS.md  C001.md  CHANGELOG.md  CHECKLIST.md  CLEAN_ROOM.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HIR.md  Makefile  PARSER_PERF.md  README.md  SECURITY.md  deny.toml  flake.nix  hawk.toml  pyproject.toml  release-notes.md  rustfmt.toml
crates/bashkit/: Cargo.toml
crates/bashkit/fuzz/: Cargo.toml
crates/bashkit/fuzz/fuzz_targets/: glob_fuzz.rs  lexer_fuzz.rs  parser_fuzz.rs
crates/bashkit/src/: lib.rs
crates/bashkit/src/parser/: ast.rs  mod.rs
crates/shuck/: Cargo.toml
crates/shuck-ast/: Cargo.toml  README.md
crates/shuck-ast-printer/: Cargo.toml
crates/shuck-ast-printer/src/: lib.rs
crates/shuck-ast-printer/tests/: corpus.rs
crates/shuck-ast/src/: AGENTS.md  arena.rs  arena_ast.rs  ast.rs  command_resolution.rs  lib.rs  name.rs  raw_shell.rs  span.rs  tokens.rs  word_surface.rs
crates/shuck-benchmark/: AGENTS.md  Cargo.toml
crates/shuck-benchmark/benches/: arithmetic.rs  case_patterns.rs  check_command.rs  editor.rs  formatter.rs  indexer.rs  large_corpus_hotspots.rs  lexer.rs  lexer_hot_path.rs  linter.rs  parser.rs  semantic.rs  unused_assignment.rs
crates/shuck-benchmark/examples/: ast_shape.rs  formatter_memory.rs  large_corpus_profile.rs  linter_memory.rs  parser_counts.rs  parser_memory.rs  semantic_memory.rs
crates/shuck-benchmark/resources/: README.md  manifest.json
crates/shuck-benchmark/resources/files/: homebrew-install.sh
crates/shuck-benchmark/src/: lib.rs  memory.rs
crates/shuck-benchmark/tests/: formatter_corpus.rs
crates/shuck-cache/: Cargo.toml  README.md
crates/shuck-cache/src/: lib.rs
crates/shuck-cli/: Cargo.toml  README.md
crates/shuck-cli/examples/: generate_config_docs.rs
crates/shuck-cli/src/: args.rs  config.rs  config_docs.rs  discover.rs  format_settings.rs  lib.rs  main.rs
crates/shuck-cli/tests/: integration_test.rs  large_corpus.rs  oracle_shellcheck_cli.rs  run_cli.rs  shellcheck_compat.rs  zsh_option_state.rs
crates/shuck-config/: Cargo.toml
crates/shuck-config/src/: lib.rs
crates/shuck-config/tests/: public_api.rs
crates/shuck-discover/: Cargo.toml
crates/shuck-discover/src/: lib.rs
crates/shuck-extract/: Cargo.toml  README.md
crates/shuck-extract/src/: lib.rs
crates/shuck-extract/tests/: github_actions_fixtures.rs
crates/shuck-format/: Cargo.toml  README.md
crates/shuck-format/src/: buffer.rs  format_element.rs  formatter.rs  lib.rs  macros.rs  prelude.rs  printer.rs
crates/shuck-formatter/: Cargo.toml  README.md
crates/shuck-formatter/src/: ast_format.rs  command.rs  comments.rs  context.rs  facts.rs  generated.rs  lib.rs  options.rs  prelude.rs  raw_syntax.rs  redirect.rs  scan.rs  script.rs  shared_traits.rs  simplify.rs  source.rs  streaming.rs  visit.rs  word.rs
crates/shuck-formatter/tests/: format_cases.rs  oracle_shfmt.rs
crates/shuck-indexer/: AGENTS.md  Cargo.toml  README.md
crates/shuck-indexer/src/: close_delimiter_index.rs  comment_index.rs  lib.rs  line_index.rs  region_index.rs
crates/shuck-linter/: AGENTS.md  Cargo.toml  README.md  build.rs  rules
crates/shuck-linter/src/: ambient_contracts.rs  checker.rs  context.rs  diagnostic.rs  facts.rs  fix.rs  fix_helpers.rs  lib.rs  locator.rs  named_groups.rs  parse_diagnostics.rs  registry.rs  rule_metadata.rs  rule_selector.rs  rule_set.rs  settings.rs  shell.rs  test.rs  value_safety.rs  violation.rs
crates/shuck-linter/tests/: build_script.rs  no_full_source_traversal.rs
crates/shuck-parser/: AGENTS.md  Cargo.toml  README.md
crates/shuck-parser/examples/: dump_tokens.rs
crates/shuck-parser/fuzz/: .gitignore  Cargo.toml
crates/shuck-parser/src/: error.rs  lib.rs  shebang.rs
crates/shuck-parser/tests/: oils_parse.rs
crates/shuck-run/: Cargo.toml
crates/shuck-run/src/: download.rs  environment.rs  lib.rs  managed.rs  metadata.rs  registry.rs  resolve.rs  system.rs  tests.rs  types.rs
crates/shuck-semantic/: Cargo.toml  README.md
crates/shuck-semantic/src/: analysis.rs  array_use.rs  binding.rs  builder.rs  call_facts.rs  call_graph.rs  cfg.rs  command_topology.rs  contract.rs  dataflow.rs  declaration.rs  dense_bit_set.rs  editor.rs  function_call_reachability.rs  function_resolution.rs  glob.rs  lib.rs  nonpersistent.rs  reachability.rs  reference.rs  runtime.rs  scope.rs  source_closure.rs  source_ref.rs  source_resolve.rs  tests.rs  uninitialized.rs  unused.rs  value_flow.rs  zsh_options.rs  zsh_plugin_framework.rs  zsh_plugin_layouts.rs
crates/shuck-semantic/tests/: no_full_source_traversal.rs
crates/shuck-server/: Cargo.toml
crates/shuck-server/src/: analysis.rs  call_hierarchy.rs  edit.rs  editor.rs  editor_features.rs  fix.rs  format.rs  fuzzing.rs  lib.rs  lint.rs  logging.rs  resolve.rs  server.rs  session.rs  symbols.rs  workspace.rs
crates/shuck-server/tests/: diagnostics.rs  disconnect.rs  latency.rs  manual.rs  perf.md
crates/shuck-syntax/: Cargo.toml
crates/shuck-syntax/src/: arithmetic.rs  dialects.rs  lib.rs  suppressions.rs
crates/shuck-wasm/: Cargo.toml  README.md
crates/shuck-wasm/src/: lib.rs
crates/shuck/src/: args.rs  cache.rs  config.rs  discover.rs  format_resolver.rs  format_settings.rs  lib.rs  main.rs  stdin.rs
crates/shuck/tests/: integration_test.rs  large_corpus.rs  oracle_shellcheck_cli.rs  shellcheck_compat.rs  zsh_option_state.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: arithmetic_fuzz.rs  common.rs  formatter_consistency_common.rs  formatter_consistency_fuzz.rs  formatter_validity_common.rs  formatter_validity_fuzz.rs  glob_fuzz.rs  lexer_fuzz.rs  linter_common.rs  linter_no_panic_fuzz.rs  lsp_common.rs  lsp_document_sync_fuzz.rs  lsp_protocol_sequence_fuzz.rs  lsp_request_surface_fuzz.rs  parser_fuzz.rs  recovered_common.rs  recovered_parser_fuzz.rs
python/: README.md  pyproject.toml  setup.py
python/src/shuck_cli/: __init__.py  _launcher.py
(+2436 files in other folders)
