# shuck

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT"
authors = ["Eric Hauser"]
repository = "https://github.com/ewhauser/shuck"
description = ""
keywords = []
categories = []

[workspace.dependencies]
# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
compact_str = "0.8"

# Checksums
sha2 = "0.11"

# CLI
clap = { version = "4", features = ["derive"] }
globset = "0.4"
ignore = "0.4"

# Serialization
serde_json = "1"
serde_yaml = "0.9"
similar = "2"
toml = "0.8"

# Testing
tempfile = "3"
memchr = "2"
insta = "1.42"
test-case = "3"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.profiling]
inherits = "release"
strip = false
debug = "full"
lto = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Conditions for К update this if you update dist)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
# TODO: add "homebrew" installer and tap/publish-jobs once ewhauser/homebrew-tap is set up
installers = ["shell", "powershell"]
# Target platforms to build for
targets = [
  "aarch64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-unknown-linux-musl",
  "x86_64-pc-windows-msvc",
]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
