# shuck

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.10"
edition = "2024"
license = "MIT"
authors = ["Eric Hauser"]
repository = "https://github.com/ewhauser/shuck"
description = "A fast shell script linter"
keywords = ["shell", "bash", "linter", "static-analysis", "cli"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Internal crates — path plus version so publishes to crates.io resolve.
# The release script bumps these in lockstep with workspace.package.version.
shuck-ast = { path = "crates/shuck-ast", version = "0.0.10" }
shuck-benchmark = { path = "crates/shuck-benchmark" }
shuck-cache = { path = "crates/shuck-cache", version = "0.0.10" }
shuck-format = { path = "crates/shuck-format", version = "0.0.10" }
shuck-formatter = { path = "crates/shuck-formatter", version = "0.0.10" }
shuck-indexer = { path = "crates/shuck-indexer", version = "0.0.10" }
shuck-linter = { path = "crates/shuck-linter", version = "0.0.10" }
shuck-parser = { path = "crates/shuck-parser", version = "0.0.10" }
shuck-semantic = { path = "crates/shuck-semantic", version = "0.0.10" }
shuck = { path = "crates/shuck", version = "0.0.10" }

# Error handling
thiserror = "2"
anyhow = "1"
etcetera = "0.8"
rayon = "1.10"
annotate-snippets = "0.10"

# Serialization
serde = { version = "1", features = ["derive"] }
compact_str = "0.8"
smallvec = "1.15"

# Checksums
sha2 = "0.11"

# CLI
clap = { version = "4", features = ["derive", "env"] }
clearscreen = "4.0.0"
colored = "3"
globset = "0.4"
ignore = "0.4"
notify = "8.0.0"

# Serialization
serde_json = "1"
serde_yaml = "0.9"
similar = "2"
toml = "0.8"
quick-junit = "0.6.0"
url = "2.5.0"

# Testing
tempfile = "3"
memchr = "2"
insta = "1.42"
test-case = "3"
roxmltree = "0.20"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.profiling]
inherits = "release"
strip = false
debug = "full"
lto = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (aim to keep this in sync with the installed dist CLI)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
# TODO: add "homebrew" installer and tap/publish-jobs once ewhauser/homebrew-tap is set up
installers = ["shell", "powershell"]
# Target platforms to build for
targets = [
  "aarch64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-unknown-linux-musl",
  "x86_64-pc-windows-msvc",
]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
# Don't run release checks on pull requests
pr-run-mode = "skip"
# We pin actions to commit SHAs, so skip the CI file freshness check
allow-dirty = ["ci"]
