# shuck

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.33"
edition = "2024"
rust-version = "1.94.1"
license = "MIT"
authors = ["Eric Hauser"]
repository = "https://github.com/ewhauser/shuck"
description = "A fast shell script linter"
keywords = ["shell", "bash", "linter", "static-analysis", "cli"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Internal crates — path plus version so publishes to crates.io resolve.
# The release script bumps these in lockstep with workspace.package.version.
shuck-ast = { path = "crates/shuck-ast", version = "0.0.33" }
shuck-benchmark = { path = "crates/shuck-benchmark" }
shuck-cache = { path = "crates/shuck-cache", version = "0.0.33" }
shuck-config = { path = "crates/shuck-config", version = "0.0.33" }
shuck-format = { path = "crates/shuck-format", version = "0.0.33" }
shuck-formatter = { path = "crates/shuck-formatter", version = "0.0.33" }
shuck-indexer = { path = "crates/shuck-indexer", version = "0.0.33" }
shuck-linter = { path = "crates/shuck-linter", version = "0.0.33" }
shuck-parser = { path = "crates/shuck-parser", version = "0.0.33" }
shuck-run = { path = "crates/shuck-run", version = "0.0.33" }
shuck-semantic = { path = "crates/shuck-semantic", version = "0.0.33" }
shuck-cli = { path = "crates/shuck-cli", version = "0.0.33" }
shuck-extract = { path = "crates/shuck-extract", version = "0.0.33" }
shuck-server = { path = "crates/shuck-server", version = "0.0.33" }

# Error handling
thiserror = "2"
anyhow = "1"
etcetera = "0.8"
rayon = "1.10"
annotate-snippets = "0.10"
crossbeam = "0.8.4"
rustc-hash = "2.0.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "std"] }
lsp-server = "0.7.6"
lsp-types = { version = "0.95.1", features = ["proposed"] }

# Serialization
serde = { version = "1", features = ["derive"] }
compact_str = "0.8"
smallvec = "1.15"

# Checksums
sha2 = "0.11"

# CLI
clap = { version = "4", features = ["derive", "env"] }
clearscreen = "4.0.0"
colored = "3"
globset = "0.4"
ignore = "0.4"
notify = "8.0.0"

# Serialization
serde_json = "1"
serde_yaml = "0.9"
saphyr = "0.0.6"
saphyr-parser = "0.0.6"
similar = "2"
toml = "0.8"
quick-junit = "0.6.0"
url = "2.5.0"

# Testing
tempfile = "3"
memchr = "2"
insta = "1.42"
test-case = "3"
roxmltree = "0.20"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.profiling]
inherits = "release"
strip = false
debug = "full"
lto = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "ewhauser/homebrew-tap"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "aarch64-unknown-linux-musl", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
# Which actions to run on pull requests
pr-run-mode = "skip"
# Pin GitHub Actions used by the generated release workflow.
github-action-commits = { "actions/checkout" = "de0fac2e4500dabe0009e67214ff5f5447ce83dd", "actions/upload-artifact" = "b7c566a772e6b6bfb58ed0dc250532a479d7789f", "actions/download-artifact" = "37930b1c2abaa49bbe596cd826c3c89aef350131" }
# Skip checking whether the specified configuration files are up to date
allow-dirty = ["ci"]
[[workspace.metadata.dist.extra-artifacts]]
artifacts = ["shuck.cdx.xml"]
build = ["./scripts/generate-release-sbom.sh"]
