# shuck-ast - AST types for parsed bash scripts

[package]
name = "shuck-ast"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
compact_str = { workspace = true }

[dev-dependencies]
