# shuck-ast - AST types for parsed bash scripts

[package]
name = "shuck-ast"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "AST types for parsed shell scripts"
keywords = ["shell", "bash", "ast", "parser"]
categories = ["parsing", "development-tools"]
readme = "../../README.md"

[dependencies]
compact_str = { workspace = true }

[dev-dependencies]
