[package]
name = "shuck-benchmark"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Benchmark fixtures and harnesses for shuck"
keywords = ["benchmark"]
categories = ["development-tools::profiling"]
publish = false

[features]
parser-benchmarking = ["shuck-parser/benchmarking"]

[dependencies]
shuck-formatter = { workspace = true, features = ["benchmarking"] }
shuck-indexer = { workspace = true }
shuck-linter = { workspace = true, features = ["benchmarking"] }
shuck-parser = { workspace = true }
shuck-semantic = { workspace = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde = { workspace = true }
serde_json = { workspace = true }
shuck-cli = { workspace = true }
tempfile = { workspace = true }

[[example]]
name = "parser_counts"
required-features = ["parser-benchmarking"]

[[bench]]
name = "lexer"
harness = false

[[bench]]
name = "lexer_hot_path"
harness = false

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "arithmetic"
harness = false

[[bench]]
name = "semantic"
harness = false

[[bench]]
name = "unused_assignment"
harness = false

[[bench]]
name = "linter"
harness = false

[[bench]]
name = "formatter"
harness = false

[[bench]]
name = "check_command"
harness = false

[[bench]]
name = "large_corpus_hotspots"
harness = false
