[package]
name = "shuck-cache"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Internal cache primitives for shuck"

[dependencies]
bincode = { version = "2", features = ["serde"] }
serde = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
