[package]
name = "shuck-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage = "https://github.com/ewhauser/shuck"
description = "A fast shell script linter"
keywords = ["shell", "bash", "linter", "static-analysis", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[lib]
name = "shuck"
path = "src/lib.rs"

[[bin]]
name = "shuck"
path = "src/main.rs"

[dependencies]
annotate-snippets = { workspace = true }
anyhow = { workspace = true }
clearscreen = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
etcetera = { workspace = true }
globset = { workspace = true }
ignore = { workspace = true }
notify = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
quick-junit = { workspace = true }
shuck-ast = { workspace = true }
shuck-cache = { workspace = true }
shuck-extract = { workspace = true }
shuck-formatter = { workspace = true }
shuck-indexer = { workspace = true }
shuck-linter = { workspace = true }
shuck-parser = { workspace = true }
shuck-semantic = { workspace = true }
similar = { workspace = true }
toml = { workspace = true }
url = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
insta = { workspace = true, features = ["json", "redactions"] }
predicates = "3"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
shuck-indexer = { workspace = true }
shuck-linter = { workspace = true }
shuck-parser = { workspace = true }
shuck-semantic = { workspace = true }
tempfile = { workspace = true }
wait-timeout = "0.2"
walkdir = "2"
roxmltree = { workspace = true }
