[package]
name = "shuck-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Configuration loading and project-root discovery for shuck"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
shuck-formatter = { workspace = true }
shuck-run = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
