[package]
name = "shuck-extract"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Embedded shell script extraction for shuck"
readme = "README.md"

[dependencies]
anyhow = { workspace = true }
marked-yaml = { workspace = true }
