[package]
name = "shuck-format"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Formatting document model and pretty-printer primitives"
keywords = ["formatter", "pretty-printer", "document"]
categories = ["text-processing", "development-tools"]

[dependencies]
unicode-width = "0.2"
