[package]
name = "shuck-formatter"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shell script formatter with configurable style options"
keywords = ["shell", "bash", "formatter", "code-style"]
categories = ["text-processing", "development-tools"]

[features]
benchmarking = []

[dependencies]
shuck-ast = { path = "../shuck-ast" }
shuck-format = { path = "../shuck-format" }
shuck-parser = { path = "../shuck-parser" }

[dev-dependencies]
shuck-benchmark = { path = "../shuck-benchmark" }
similar = { workspace = true }
