[package]
name = "shuck-formatter"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shell script formatter with configurable style options"
keywords = ["shell", "bash", "formatter", "code-style"]
categories = ["text-processing", "development-tools"]

[features]
benchmarking = []

[dependencies]
shuck-ast = { workspace = true }
shuck-format = { workspace = true }
shuck-parser = { workspace = true }

[dev-dependencies]
shuck-benchmark = { workspace = true }
shuck-indexer = { workspace = true }
shuck-linter = { workspace = true }
similar = { workspace = true }
