[package]
name = "shuck-indexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Positional and structural indexes over parsed shell scripts"
keywords = ["shell", "bash", "indexer", "static-analysis"]
categories = ["parsing", "development-tools"]

[dependencies]
shuck-ast = { workspace = true }
shuck-parser = { workspace = true }
