[package]
name = "shuck-linter"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Lint rule engine and checker for shell scripts"
keywords = ["shell", "bash", "linter", "static-analysis"]
categories = ["development-tools"]

[features]
benchmarking = []

[dependencies]
anyhow = { workspace = true }
rustc-hash = "2"
smallvec.workspace = true
thiserror = { workspace = true }
shuck-ast = { path = "../shuck-ast" }
shuck-indexer = { path = "../shuck-indexer" }
shuck-semantic = { path = "../shuck-semantic" }
shuck-parser = { path = "../shuck-parser" }

[dev-dependencies]
insta = { workspace = true }
similar = { workspace = true }
test-case = { workspace = true }
tempfile = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }

[build-dependencies]
serde = { workspace = true }
serde_yaml = { workspace = true }
