# shuck-parser - Bash parser library

[package]
name = "shuck-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
shuck-ast = { path = "../shuck-ast" }

[dev-dependencies]
