# shuck-parser - Bash parser library

[package]
name = "shuck-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "A fast, safe bash parser library"
keywords = ["shell", "bash", "parser", "lexer"]
categories = ["parsing", "development-tools"]
readme = "README.md"

[features]
benchmarking = []

[dependencies]
shuck-ast = { workspace = true }
memchr.workspace = true
smallvec.workspace = true

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
