[package]
name = "shuck-run"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage = "https://github.com/ewhauser/shuck"
description = "Managed shell interpreter resolution for shuck"
keywords = ["shell", "bash", "runner", "version-manager"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = { workspace = true }
etcetera = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
shuck-parser = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
