[package]
name = "shuck-semantic"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Semantic analysis model for shell scripts with scopes, bindings, and dataflow"
keywords = ["shell", "bash", "semantic-analysis", "static-analysis"]
categories = ["development-tools"]

[dependencies]
bitflags = "2"
rustc-hash = "2"
smallvec.workspace = true
shuck-ast = { path = "../shuck-ast" }
shuck-indexer = { path = "../shuck-indexer" }
shuck-parser = { path = "../shuck-parser" }

[dev-dependencies]
tempfile = { workspace = true }
