[package]
name = "shuck-semantic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Semantic analysis model for shell scripts with scopes, bindings, and dataflow"
keywords = ["shell", "bash", "semantic-analysis", "static-analysis"]
categories = ["development-tools"]

[dependencies]
bitflags = "2"
rustc-hash = "2"
smallvec = { workspace = true }
shuck-ast = { workspace = true }
shuck-indexer = { workspace = true }
shuck-parser = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
