[package]
name = "shuck-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Language server scaffold for shuck"

[dependencies]
anyhow = { workspace = true }
crossbeam = { workspace = true }
lsp-server = { workspace = true }
lsp-types = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shuck-ast = { workspace = true }
shuck-config = { workspace = true }
shuck-indexer = { workspace = true }
shuck-linter = { workspace = true }
shuck-parser = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
