[package]
name = "shuck-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
bashkit = { path = "../bashkit" }
thiserror = { workspace = true }
