[package]
name = "shuck"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CLI frontend for shuck"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
shuck-cache = { path = "../shuck-cache" }
shuck-indexer = { path = "../shuck-indexer" }
shuck-linter = { path = "../shuck-linter" }
shuck-parser = { path = "../shuck-parser" }
shuck-semantic = { path = "../shuck-semantic" }
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = { workspace = true }
