[package]
name = "shuck"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "A fast shell script linter and formatter"
keywords = ["shell", "bash", "linter", "formatter", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
globset = { workspace = true }
ignore = { workspace = true }
serde = { workspace = true }
shuck-cache = { path = "../shuck-cache" }
shuck-formatter = { path = "../shuck-formatter" }
shuck-indexer = { path = "../shuck-indexer" }
shuck-linter = { path = "../shuck-linter" }
shuck-parser = { path = "../shuck-parser" }
shuck-semantic = { path = "../shuck-semantic" }
similar = { workspace = true }
toml = { workspace = true }
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
shuck-ast = { path = "../shuck-ast" }
shuck-indexer = { path = "../shuck-indexer" }
shuck-linter = { path = "../shuck-linter" }
shuck-parser = { path = "../shuck-parser" }
shuck-semantic = { path = "../shuck-semantic" }
tempfile = { workspace = true }
wait-timeout = "0.2"
walkdir = "2"
